--- a/chat/index.html
+++ b/chat/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Your project description">
-    <title>Sigmund - Váš důvěryhodný společník</title>
+    <meta name="description" content="Chat se Sigmundem">
+    <title>Sigmund Chat - Váš důvěryhodný společník</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -26,12 +26,19 @@
         }
     </script>
     <!-- Add React -->
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script type="importmap">
+    {
+      "imports": {
+        "react": "https://esm.sh/react@18",
+        "react-dom": "https://esm.sh/react-dom@18",
+        "react-dom/client": "https://esm.sh/react-dom@18/client"
+      }
+    }
+    </script>
 </head>
 <body>
     <div id="root"></div>
     <!-- Use the built JavaScript file -->
-    <script src="./dist/main.js"></script>
+    <script type="module" src="../dist/chat.js"></script>
 </body>
 </html> 
